# VaLiAnT

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  run_tests.sh  setup.cfg  test-requirements.txt  test.sh
examples/: README.md  compare_exp_results.sh  run_brca1_nuc.sh  run_brca1_pep.sh  unpack_reference.sh
examples/brca1_nuc_output_exp/: chr17_43104080_43104330_minus_sgRNA_ex5.vcf  chr17_43104080_43104330_minus_sgRNA_ex5_meta.csv  chr17_43104080_43104330_minus_sgRNA_ex5_meta_excluded.csv  chr17_43104080_43104330_minus_sgRNA_ex5_unique.csv  chr17_43104794_43105038_minus_sgRNA_ex4_unique.csv  chr17_43106355_43106599_minus_sgRNA_ex3_meta.csv  chr17_43106355_43106599_minus_sgRNA_ex3_meta_excluded.csv  chr17_43106355_43106599_minus_sgRNA_ex3_unique.csv  chr17_43115634_43115878_minus_sgRNA_ex2.vcf  chr17_43115634_43115878_minus_sgRNA_ex2_meta.csv  chr17_43115634_43115878_minus_sgRNA_ex2_meta_excluded.csv  ref_sequences.csv
examples/brca1_pep_output_exp/: chr17_43104080_43104330_minus_sgRNA_ex5.vcf  chr17_43104080_43104330_minus_sgRNA_ex5_meta.csv  chr17_43104794_43105038_minus_sgRNA_ex4_meta.csv  chr17_43106355_43106599_minus_sgRNA_ex3.vcf  chr17_43115634_43115878_minus_sgRNA_ex2.vcf  (+1 more)
nextflow/: .gitignore  README.md
src/: requirements.txt  setup.py
tests/: run_unit_tests.sh  test_background_variants.py  test_cds_seq.py  test_csv.py  test_dna_str.py  test_exon.py  test_genomic_position_offsets.py  test_mutator.py  test_seq.py  test_seq_collection.py  test_seq_converter.py  test_transcript.py  test_uint_range_sorted_list.py
(+529 files in other folders)
