[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "valiant"
description = "Variant Library Annotation Tool"
dynamic = ["version"]
authors = [
    {name = "Luca Barbon", email = "cgphelp@sanger.ac.uk"}
]
requires-python = ">=3.11"
dependencies = [
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "pydantic==2.7.0",
    "pysam==0.22.0"
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only"
]

[project.scripts]
valiant = "valiant.__main__:main"
